--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.ppomppu.android'
+    namespace 'com.ppomppu.study'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.ppomppu.android"
+        applicationId "com.ppomppu.study"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -27,6 +27,7 @@ android {
     viewBinding {
         enabled = true
     }
+
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
